--- a/app/src/main/res/layout/dropdown_text_layout.xml
+++ b/app/src/main/res/layout/dropdown_text_layout.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
     android:text="Title"
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
     android:textColor="@color/black"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:textSize="12sp"
-    android:maxLines="1"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:ellipsize="marquee"/>
+    android:textFontWeight="600"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+</TextView>
+
