--- a/app/src/main/res/layout/dummy.xml
+++ b/app/src/main/res/layout/dummy.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="21dp"
             android:layout_marginTop="28dp"
-            android:layout_marginBottom="28dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp">
 
@@ -276,14 +279,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="21dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="28dp"
+            android:layout_marginTop="28dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -454,9 +457,44 @@
                     android:layout_marginHorizontal="40dp"
                     android:gravity="center"
                     android:text="@string/the_shipment_cannot"
-                    android:textColor="@color/black"
+                    android:textColor="#818181"
                     android:textFontWeight="400"
                     android:textSize="8sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="24dp">
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
+                        app:cornerRadius="5dp"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        app:strokeColor="@color/button_blue"
+                        android:text="Cancel Shipment"
+                        android:textAllCaps="false"
+                        android:letterSpacing="0.03"
+                        android:textColor="@color/button_blue"
+                        android:textFontWeight="600"
+                        android:textSize="12sp"/>
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
+                        app:cornerRadius="5dp"
+                        android:layout_marginLeft="20dp"
+                        app:backgroundTint="#17B28F"
+                        android:text="Upload Invoice"
+                        android:textAllCaps="false"
+                        android:letterSpacing="0.03"
+                        android:textColor="@color/white"
+                        android:textFontWeight="600"
+                        android:textSize="12sp"/>
+                </LinearLayout>
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
@@ -471,6 +509,7 @@
                         android:gravity="center_vertical"
                         android:paddingHorizontal="23dp"
                         android:textSize="8sp"
+                        android:textColor="#00A3C7"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="In Review"/>
@@ -494,6 +533,7 @@
                     android:insetTop="0dp"
                     android:layout_marginTop="20dp"
                     android:insetBottom="0dp"
+                    app:cornerRadius="5dp"
                     app:backgroundTint="#17B28F"
                     android:text="Make Payment"
                     android:textAllCaps="false"
@@ -513,42 +553,167 @@
                     android:gravity="center"/>
 
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="22dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Wire Transfer Acknowledgement"
+                    android:textSize="12dp"
+                    android:textFontWeight="500"
+                    android:textColor="#3A5FD8" />
+
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:src="@drawable/ic_arrow"
+                        android:layout_marginLeft="3dp"/>
+
+
+                </LinearLayout>
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp"
+                    app:strokeWidth="0dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp">
+                    <TextView
+                        android:background="#F6E6B9"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="11dp"
+                        android:textSize="8sp"
+                        android:textColor="#F8B800"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Verifying Payment"/>
+                </com.google.android.material.card.MaterialCardView>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="We’re confirming your payment status with our bank.\nWe will initiate your shipment after confirmation."
+                    android:textColor="#818181"
+                    android:textSize="8sp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginHorizontal="70dp"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"/>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change Payment Method/ Retry Payment"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="18dp"
+                    android:textSize="12dp"
+                    android:textFontWeight="500"
+                    android:textColor="#3A5FD8" />
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp"
+                    app:strokeWidth="0dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp">
+                    <TextView
+                        android:background="#801DD2A9"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="8dp"
+                        android:textSize="8sp"
+                        android:textColor="#00A781"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Payment Confirmed"/>
+                </com.google.android.material.card.MaterialCardView>
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="We’ve recieved your payment.\nYour shipment is being initiated."
+                    android:textColor="#818181"
+                    android:textSize="8sp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginHorizontal="70dp"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"/>
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp"
+                    app:strokeWidth="0dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp">
+                    <TextView
+                        android:background="#EEE5FF"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="26dp"
+                        android:textSize="8sp"
+                        android:textColor="#8950FC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Dispatched"/>
+                </com.google.android.material.card.MaterialCardView>
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginVertical="24dp">
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    app:strokeColor="@color/button_blue"
-                    android:text="Cancel Shipment"
-                    android:textAllCaps="false"
-                    android:letterSpacing="0.03"
-                    android:textColor="@color/button_blue"
-                    android:textFontWeight="600"
-                    android:textSize="12sp"/>
+                    android:layout_marginTop="19dp">
                     <com.google.android.material.button.MaterialButton
                         android:layout_width="wrap_content"
                         android:layout_height="32dp"
                         android:insetTop="0dp"
                         android:insetBottom="0dp"
+                        app:cornerRadius="5dp"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        app:strokeColor="@color/button_blue"
+                        android:text="Download Invoice"
+                        android:textAllCaps="false"
+                        android:letterSpacing="0.03"
+                        android:textColor="@color/button_blue"
+                        android:textFontWeight="600"
+                        android:textSize="12sp"/>
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
+                        app:cornerRadius="5dp"
                         android:layout_marginLeft="20dp"
                         app:backgroundTint="#17B28F"
-                        android:text="Upload Invoice"
+                        android:text="Track Shipment"
                         android:textAllCaps="false"
                         android:letterSpacing="0.03"
                         android:textColor="@color/white"
                         android:textFontWeight="600"
                         android:textSize="12sp"/>
                 </LinearLayout>
+
+
             </LinearLayout>
 
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
