--- a/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
+++ b/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
@@ -660,6 +660,7 @@
                             app:strokeColor="#2D8DFF"/>
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/shippingPrefProceedBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
                             android:paddingHorizontal="20dp"
