--- a/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
+++ b/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
@@ -47,6 +47,7 @@
                         android:gravity="right">
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/createShipRequestBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="19dp"
