--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -30,7 +30,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-
+                        android:layout_gravity="center_vertical"
                         android:gravity="center_vertical">
 
                         <de.hdodenhof.circleimageview.CircleImageView
@@ -51,7 +51,7 @@
                                 android:id="@+id/websiteName"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Amazon"
+                                android:text=""
                                 android:textColor="@color/black"
                                 android:textFontWeight="700"
                                 android:textSize="14sp" />
@@ -75,8 +75,8 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginVertical="26dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
                             android:layout_marginLeft="18dp"
                             android:orientation="vertical">
 
@@ -97,7 +97,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="500"
-                                    android:text=" #RNDM04312"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textSize="10sp" />
 
@@ -121,7 +121,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="500"
-                                    android:text=" 15 Dec 2020"
+                                    android:text=" "
                                     android:textColor="@color/black"
                                     android:textSize="10sp" />
 
@@ -167,21 +167,10 @@
                             android:layout_height="wrap_content"
                             app:tabIndicatorColor="#3A5FD8"
                             app:tabIndicatorHeight="1dp"
+                            app:tabTextAppearance="@style/MineCustomTabText"
                             app:tabSelectedTextColor="#3A5FD8"
-                            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                             app:tabTextColor="@color/black">
 
-                            <!--                    <com.google.android.material.tabs.TabItem-->
-                            <!--                        android:id="@+id/tab1"-->
-                            <!--                        android:layout_width="match_parent"-->
-                            <!--                        android:layout_height="wrap_content"-->
-                            <!--                        android:text="Order Details" />-->
-
-                            <!--                    <com.google.android.material.tabs.TabItem-->
-                            <!--                        android:id="@+id/tab2"-->
-                            <!--                        android:layout_width="match_parent"-->
-                            <!--                        android:layout_height="wrap_content"-->
-                            <!--                        android:text="Order Updates" />-->
 
                         </com.google.android.material.tabs.TabLayout>
 
