--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -145,34 +145,59 @@
                             android:textFontWeight="700"
                             android:textSize="14sp" />
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
                             android:background="@drawable/all_spnner_bg"
-                            android:padding="0dp"
-                            app:boxStrokeWidth="0dp"
-                            app:boxStrokeWidthFocused="0dp"
-                            app:endIconTint="@color/hint_color"
-                            app:hintAnimationEnabled="false"
-                            app:hintEnabled="false">
+                            android:layout_alignParentRight="true">
 
-                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                            <androidx.appcompat.widget.AppCompatSpinner
+
                                 android:id="@+id/allSpinner"
-                                android:layout_width="wrap_content"
+                                android:layout_width="92dp"
                                 android:layout_height="24dp"
-                                android:hint="All"
-                                android:inputType="none"
-                                android:padding="0dp"
+                                android:dropDownWidth="109dp"
+                                android:overlapAnchor="false"
+                                android:background="@null"
+                                android:textSize="12sp"
+                                android:textAlignment="center"/>
 
-                                android:paddingStart="30dp"
-                                android:textColor="@color/black"
-                                android:textColorHint="@color/black"
-                                android:textFontWeight="600"
-                                android:textSize="12sp" />
+                            <ImageView
+                                android:layout_width="12dp"
+                                android:layout_height="12dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:src="@drawable/triangle" />
 
-                        </com.google.android.material.textfield.TextInputLayout>
+
+                        </LinearLayout>
+<!--                        <com.google.android.material.textfield.TextInputLayout-->
+<!--                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_alignParentRight="true"-->
+<!--                            android:background="@drawable/all_spnner_bg"-->
+<!--                            app:boxStrokeWidth="0dp"-->
+<!--                            app:boxStrokeWidthFocused="0dp"-->
+<!--                            app:endIconTint="@color/hint_color"-->
+<!--                            app:hintAnimationEnabled="false"-->
+<!--                            app:hintEnabled="false">-->
+
+<!--                            <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
+<!--                                android:id="@+id/allSpinner"-->
+<!--                                android:layout_width="92dp"-->
+<!--                                android:layout_height="24dp"-->
+<!--                                android:hint="All"-->
+<!--                                android:inputType="none"-->
+<!--                                android:paddingVertical="0dp"-->
+<!--                                android:layout_marginLeft="15dp"-->
+<!--                                android:gravity="center"-->
+<!--                                android:textColor="@color/black"-->
+<!--                                android:textColorHint="@color/black"-->
+<!--                                android:textFontWeight="600"-->
+<!--                                android:textSize="12sp" />-->
+
+<!--                        </com.google.android.material.textfield.TextInputLayout>-->
 
 
 
