--- a/app/src/main/res/layout/wallet_transaction_single_layout.xml
+++ b/app/src/main/res/layout/wallet_transaction_single_layout.xml
@@ -11,9 +11,10 @@
         android:src="@mipmap/refferal_reward"
         android:layout_gravity="center_vertical"/>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_weight="1"
         android:layout_marginLeft="15dp">
         <TextView
             android:layout_width="wrap_content"
@@ -45,12 +46,12 @@
 
     <TextView
         android:id="@+id/price"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
         android:textColor="#EF5261"
         android:textFontWeight="600"
         android:textSize="14sp"
         android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="3dp"
         android:text="+ \u20B9 250"/>
 </LinearLayout>
