--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,11 +41,11 @@
 
 
     <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
-        <item name="android:divider">#d1d1d1</item>
-        <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">@color/black</item>
+        <item name="android:dividerHeight">1dp</item>
     </style>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
     <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
     </style>
 
