--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -156,7 +156,8 @@
                                 android:id="@+id/allSpinner"
                                 android:layout_width="92dp"
                                 android:layout_height="24dp"
-                                android:dropDownWidth="109dp"
+                                android:layout_marginRight="-15dp"
+                                android:dropDownWidth="92dp"
                                 android:overlapAnchor="false"
                                 android:background="@null"
                                 android:textSize="12sp"
