--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:dropDownListViewStyle">@style/MySpinner</item>
     </style>
 <!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
 <!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
@@ -21,4 +22,8 @@
 <!--        <item name="DialogSpotColor">@color/hint_color</item>-->
 <!--        <item name="DialogSpotCount">8</item>-->
 <!--    </style>-->
+    <style name="MySpinner" parent="Widget.AppCompat.ListView.DropDown">
+        <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">#000</item>
+    </style>
 </resources>
