--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:dropDownListViewStyle">@style/MySpinner</item>
     </style>
 
     //Dialogue Theme
@@ -40,14 +41,19 @@
 
 
 
-    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
-        <item name="android:divider">#d1d1d1</item>
+<!--    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">-->
+<!--        <item name="android:divider">#d1d1d1</item>-->
+<!--        <item name="android:dividerHeight">0.5dp</item>-->
+<!--    </style>-->
+
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+<!--    <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>-->
+<!--    </style>-->
+
+<!--   spinner Theme -->
+    <style name="MySpinner" parent="Widget.AppCompat.ListView.DropDown">
         <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">#C4C4C4</item>
     </style>
-
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-    <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
-    </style>
-
 
 </resources>
