--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -552,6 +552,7 @@
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             app:hintAnimationEnabled="false">
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/phoneNoEditText"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:padding="0dp"
@@ -563,6 +564,7 @@
                     </LinearLayout>
 
                     <ImageView
+                        android:visibility="gone"
                         android:id="@+id/phoneNoCheck"
                         android:layout_width="18dp"
                         android:layout_height="18dp"
